fix: distribute width of reviews header so date doesn't need to wrap

--- a/css/styles.css
+++ b/css/styles.css
@@ -281,11 +281,11 @@ nav h1 {
   background-color: #252831;
 }
 .reviews-reviewer {
-  width: 50%;
+  width: 40%;
   color: #fff;
 }
 .reviews-date {
-  width: 50%;
+  width: 60%;
   text-align: right;
   color: #fff;
 }
